# azure-ai-search-rust

./: Cargo.toml  LICENSE  README.md
examples/: get_document.rs  hybrid_search.rs  put_document.rs  suggest.rs  vector_search.rs
src/: client.rs  error.rs  lib.rs
src/models/: document.rs  index.rs  mod.rs  search.rs  suggest.rs
src/operations/: document.rs  index.rs  mod.rs  search.rs  suggest.rs
