[package]
name = "azure_search_rs"
version = "0.1.0"
edition = "2021"
description = "Azure AI Search client library for Rust"
authors = ["Michael Yang <github@flachesis.org>"]
license = "MIT"
repository = "https://github.com/flachesis/azure-search-rs"

[[example]]
name = "hybrid_search"
path = "examples/hybrid_search.rs"
[[example]]
name = "suggest_example"
path = "examples/suggest.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
url = "2.4.1"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0.140"
thiserror = "1.0"
anyhow = "1.0" # For examples

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
