[package]
name = "azure_search_rs"
version = "0.3.0"
edition = "2021"
description = "Azure AI Search client library for Rust"
authors = ["Michael Yang <github@flachesis.org>"]
license = "MIT"
repository = "https://github.com/flachesis/azure-ai-search-rust"

[[example]]
name = "hybrid_search"
path = "examples/hybrid_search.rs"

[[example]]
name = "vector_search"
path = "examples/vector_search.rs"

[[example]]
name = "get_document"
path = "examples/get_document.rs"

[[example]]
name = "put_document"
path = "examples/put_document.rs"

[dependencies]
reqwest = { version = "^0.12.15", features = ["json"] }
url = "^2.4.1"
tokio = { version = "^1.0", features = ["full"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0.140"
thiserror = "^2.0.12"
